<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Canvas and Custom Views</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_home">Home</string>
    <string name="action_rect_and_arc">Rect and arc</string>
    <string name="action_overlay">Overlay</string>
    <string name="action_radial_gradient_view">Radial gradient view</string>
    <string name="action_masked_image_view">Masked image view</string>
    <string name="action_rotating_image_view">Rotating image view</string>
    <string name="action_drawing_view">Drawing view</string>
    <string name="action_rounded_view">Rounded view</string>
    <string name="action_counter_view_01">Counter view 01</string>
    <string name="action_counter_view_02">Counter view 02</string>
    <string name="action_bubble_view">Bubble view</string>
    <string name="home_hint">Select one example from the menu.</string>
    <string name="drawing_view_hint">Draw the screen with your finger.</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="bubble_temp_text1">This is a dummy text used to test the bubbles</string>
    <string name="bubble_temp_text2">This dummy text helps testing</string>
    <string name="bubble_temp_text3">This is a dummy text</string>
    <string name="x_axis">X</string>
    <string name="y_axis">Y</string>
    <string name="z_axis">Z</string>
    <string name="axis">Axis Rotation</string>
    <string name="value">Value</string>
    <string name="rounded_view">Rounded View</string>
    <string name="counter_view">Counter View</string>
</resources>
