<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white">

    <com.siziksu.canvas.ui.view.RotatingImageView
        android:id="@+id/rotatingImageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:src="@drawable/pencils" />

    <TextView
        android:id="@+id/title"
        android:layout_below="@+id/rotatingImageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/axis" />

    <LinearLayout
        android:id="@+id/x"
        android:layout_below="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/x_axis" />

        <SeekBar
            android:id="@+id/drawingSeekBarX"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="180" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/y"
        android:layout_below="@+id/x"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/y_axis" />

        <SeekBar
            android:id="@+id/drawingSeekBarY"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="180" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/z"
        android:layout_below="@+id/y"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/z_axis" />

        <SeekBar
            android:id="@+id/drawingSeekBarZ"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="180" />
    </LinearLayout>
</RelativeLayout>